# exachan

./: Cargo.toml
src/: main.rs
src/templates/: footer.rs
static/: index.html
